modifications for selenoid+jenkins task